--- a/ShrinkMeister/Views/ProcessViewCrop.xib
+++ b/ShrinkMeister/Views/ProcessViewCrop.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -28,9 +28,14 @@
                     <rect key="frame" x="479" y="10" width="30" height="30"/>
                     <state key="normal" title="T."/>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="geH-JL-YFL">
+                    <rect key="frame" x="433" y="10" width="30" height="30"/>
+                    <state key="normal" title="L."/>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="geH-JL-YFL" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="98V-0D-I5G"/>
                 <constraint firstAttribute="trailing" secondItem="THv-PM-XBl" secondAttribute="trailing" constant="28" id="N6f-DY-7aP"/>
                 <constraint firstItem="nfV-MW-wCM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Qtj-tD-PZp"/>
                 <constraint firstItem="nfV-MW-wCM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="ef0-8f-lr4"/>
@@ -38,6 +43,7 @@
                 <constraint firstItem="nfV-MW-wCM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="k7y-94-nLR"/>
                 <constraint firstItem="THv-PM-XBl" firstAttribute="leading" secondItem="FVd-Mz-sqe" secondAttribute="trailing" constant="26" id="qlB-eL-cVP"/>
                 <constraint firstItem="THv-PM-XBl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="soj-OB-hNR"/>
+                <constraint firstItem="FVd-Mz-sqe" firstAttribute="leading" secondItem="geH-JL-YFL" secondAttribute="trailing" constant="16" id="ydf-mu-IeA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
@@ -48,6 +54,7 @@
             <connections>
                 <outlet property="aspectSelector" destination="nfV-MW-wCM" id="xLa-yh-mTI"/>
                 <outlet property="confirmButton" destination="THv-PM-XBl" id="p3b-cI-mYd"/>
+                <outlet property="lockAspectButton" destination="geH-JL-YFL" id="35Q-U1-QOn"/>
                 <outlet property="transAspectButton" destination="FVd-Mz-sqe" id="r6i-C1-2Bi"/>
             </connections>
             <point key="canvasLocation" x="239" y="322"/>
