--- a/ShrinkMeister/Views/ProcessViewCustom.xib
+++ b/ShrinkMeister/Views/ProcessViewCustom.xib
@@ -12,7 +12,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cyS-Xo-vzZ">
-                    <rect key="frame" x="30" y="10" width="50" height="30"/>
+                    <rect key="frame" x="131" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="GGI-1k-k3a"/>
                     </constraints>
@@ -20,7 +20,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QN1-UD-qUE">
-                    <rect key="frame" x="115" y="10" width="50" height="30"/>
+                    <rect key="frame" x="213" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="oOr-rv-Red"/>
                     </constraints>
@@ -35,55 +35,81 @@
                     </constraints>
                 </button>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dgJ-PA-5JU">
-                    <rect key="frame" x="200" y="10" width="50" height="30"/>
+                    <rect key="frame" x="171" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="ekM-lJ-wey"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IpM-jB-NTK">
-                    <rect key="frame" x="260" y="10" width="30" height="30"/>
-                    <state key="normal" title="kB">
-                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppv-PK-NXK">
-                    <rect key="frame" x="88" y="16" width="20" height="20"/>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="utd-8g-zCc">
+                    <rect key="frame" x="14" y="11" width="87" height="29"/>
+                    <segments>
+                        <segment title="Pixel"/>
+                        <segment title="Size"/>
+                    </segments>
+                </segmentedControl>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppv-PK-NXK">
+                    <rect key="frame" x="278" y="15" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="Ec4-G3-3op"/>
                         <constraint firstAttribute="width" constant="20" id="NZD-ug-j2P"/>
                     </constraints>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zE6-O2-oBA" userLabel="I">
+                    <rect key="frame" x="191" y="15" width="11.5" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndd-6i-FwX">
+                    <rect key="frame" x="231" y="15" width="20" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="ndd-6i-FwX" firstAttribute="leading" secondItem="dgJ-PA-5JU" secondAttribute="trailing" constant="10" id="0AK-Wu-LZg"/>
+                <constraint firstItem="ppv-PK-NXK" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="15" id="5UE-UR-vWd"/>
                 <constraint firstItem="ppv-PK-NXK" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="20" id="8jB-OU-VUL"/>
-                <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="35" id="Bee-L6-u9q"/>
+                <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="32" id="Bee-L6-u9q"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Bel-Nc-UJM"/>
-                <constraint firstItem="cyS-Xo-vzZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="BtS-e7-AeS"/>
-                <constraint firstItem="IpM-jB-NTK" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="C0y-1Y-boK"/>
+                <constraint firstItem="cyS-Xo-vzZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="150" id="BtS-e7-AeS"/>
                 <constraint firstItem="dgJ-PA-5JU" firstAttribute="leading" secondItem="ppv-PK-NXK" secondAttribute="trailing" constant="40" id="DhX-mP-ogs"/>
                 <constraint firstAttribute="trailing" secondItem="P0X-2l-cDO" secondAttribute="trailing" constant="28" id="E9h-Zm-bfB"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Exl-4a-yYJ"/>
+                <constraint firstItem="cyS-Xo-vzZ" firstAttribute="leading" secondItem="utd-8g-zCc" secondAttribute="trailing" constant="30" id="G2o-e6-zyL"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="K7M-xh-685"/>
                 <constraint firstItem="dgJ-PA-5JU" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="35" id="Nfx-hC-OpZ"/>
+                <constraint firstItem="ndd-6i-FwX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="OeP-vE-JBZ"/>
                 <constraint firstItem="dgJ-PA-5JU" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="QEn-RF-DOh"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="ppv-PK-NXK" secondAttribute="trailing" constant="25" id="R88-fb-xq3"/>
                 <constraint firstItem="cyS-Xo-vzZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="V1u-El-GaA"/>
+                <constraint firstItem="zE6-O2-oBA" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="10" id="VT7-bL-vto"/>
+                <constraint firstItem="utd-8g-zCc" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="WPf-FA-fCX"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="28" id="Wga-ox-Bwb"/>
                 <constraint firstItem="ppv-PK-NXK" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Ylv-fB-OWy"/>
-                <constraint firstItem="IpM-jB-NTK" firstAttribute="leading" secondItem="dgJ-PA-5JU" secondAttribute="trailing" constant="10" id="Yly-Jr-ku7"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="ppv-PK-NXK" secondAttribute="trailing" constant="7" id="eID-FN-pgu"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="31" id="kFk-av-29P"/>
+                <constraint firstItem="zE6-O2-oBA" firstAttribute="leading" secondItem="dgJ-PA-5JU" secondAttribute="trailing" constant="-2" id="o5z-1I-Ho2"/>
                 <constraint firstItem="ppv-PK-NXK" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="8" id="s7B-mu-4IE"/>
+                <constraint firstItem="zE6-O2-oBA" firstAttribute="centerY" secondItem="ppv-PK-NXK" secondAttribute="centerY" id="vfW-Ll-E1R"/>
+                <constraint firstItem="dgJ-PA-5JU" firstAttribute="leading" secondItem="utd-8g-zCc" secondAttribute="trailing" constant="70" id="zFb-Lw-YGW"/>
+                <constraint firstItem="utd-8g-zCc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="zyV-Jx-Jzi"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="8jB-OU-VUL"/>
-                    <exclude reference="Bel-Nc-UJM"/>
+                    <exclude reference="BtS-e7-AeS"/>
                     <exclude reference="DhX-mP-ogs"/>
+                    <exclude reference="Nfx-hC-OpZ"/>
+                    <exclude reference="o5z-1I-Ho2"/>
+                    <exclude reference="Bel-Nc-UJM"/>
+                    <exclude reference="eID-FN-pgu"/>
+                    <exclude reference="8jB-OU-VUL"/>
+                    <exclude reference="s7B-mu-4IE"/>
                     <exclude reference="R88-fb-xq3"/>
                     <exclude reference="Wga-ox-Bwb"/>
                     <exclude reference="kFk-av-29P"/>
@@ -92,10 +118,12 @@
             <connections>
                 <outlet property="confirmButton" destination="P0X-2l-cDO" id="DFS-Ct-ABN"/>
                 <outlet property="heightField" destination="QN1-UD-qUE" id="8qc-pS-VtV"/>
+                <outlet property="kbLabel" destination="ndd-6i-FwX" id="VVT-1c-lHE"/>
                 <outlet property="lockAspectButton" destination="ppv-PK-NXK" id="cNa-HC-1Nq"/>
                 <outlet property="sizeField" destination="dgJ-PA-5JU" id="bWq-AX-k4W"/>
-                <outlet property="toggleSizeButton" destination="IpM-jB-NTK" id="fpF-Km-4fy"/>
+                <outlet property="toggleSizeControl" destination="utd-8g-zCc" id="VmZ-zu-4pB"/>
                 <outlet property="widthField" destination="cyS-Xo-vzZ" id="7HU-jj-YWR"/>
+                <outlet property="xLabel" destination="zE6-O2-oBA" id="GSj-MO-v2j"/>
             </connections>
             <point key="canvasLocation" x="243" y="180"/>
         </view>
